# purenix

./: .gitignore  CHANGELOG.md  LICENSE  README.md  cabal.project  flake.nix  hie.yaml  packages.dhall  purenix.cabal
.github/: MEMBERS.md
.github/workflows/: CI.yaml
app/: Main.hs
bench/: Main.hs
docs/: README.md  quick-start.md
nix/: overlay.nix
purenix/: .gitignore  LICENSE  PKGNAME.cabal  README.md  README_TEMPLATE.md  cabal.project  flake.nix  hie.yaml  purenix.cabal  stack.yaml  wizard.sh
purenix/app/: Main.hs
purenix/src/: Lib.hs
purenix/src/Nix/: AST.hs  Convert.hs  Expr.hs  Identifiers.hs  Prelude.hs  Print.hs  Util.hs
purenix/test/: Spec.hs
purescript-cabal-parser/: packages.dhall  spago.dhall
purescript-cabal-parser/src/: Dep.purs  Main.nix  Main.purs
purescript-control/: CHANGELOG.md  spago.dhall
purescript-control/src/Control/: Alt.purs  Extend.nix  MonadPlus.purs  MonadZero.purs
purescript-newtype/: .gitignore  CHANGELOG.md  spago.dhall
purescript-newtype/src/Data/: Newtype.purs
purescript-parser-combinator/: packages.dhall  spago.dhall
purescript-parser-combinator/src/: Main.purs  Parser.purs
purescript-parser-combinator/src/Control/: Alt.purs  Alternative.purs  Applicative.purs  Apply.purs  Bind.purs  Category.purs  Monad.purs  MonadPlus.purs  MonadZero.purs  Plus.purs
purescript-parser-combinator/src/Control/Monad/: State.purs
purescript-parser-combinator/src/Control/Monad/State/: Class.purs  Trans.purs
purescript-parser-combinator/src/Control/Monad/Trans/: Class.purs
purescript-parser-combinator/src/Data/: BooleanAlgebra.purs  Bounded.nix  Bounded.purs  Either.purs  Eq.nix  EuclideanRing.nix  Function.purs  Functor.nix  Functor.purs  HeytingAlgebra.purs  Identity.purs  Maybe.purs  Monoid.purs  Ord.nix  Ord.purs  Ring.nix  Semigroup.js  Semigroup.nix  Semigroup.purs  Semiring.nix  Semiring.purs  Show.js  Show.nix  Show.purs  Symbol.js  Symbol.nix  Tuple.purs  Unit.nix  Unit.purs  Void.purs
purescript-parser-combinator/src/Data/Generic/: Rep.purs
purescript-parser-combinator/src/Data/Monoid/: Additive.purs  Conj.purs  Disj.purs  Dual.purs  Endo.purs  Generic.purs  Multiplicative.purs
purescript-parser-combinator/src/Data/Semigroup/: First.purs  Generic.purs  Last.purs
purescript-parser-combinator/src/Data/Tuple/: Nested.purs
purescript-parser-combinator/src/Record/: Unsafe.nix
purescript-prelude/: CHANGELOG.md  spago.dhall
purescript-prelude/src/: Prelude.purs
purescript-prelude/src/Control/: Applicative.purs  Apply.nix  Apply.purs  Bind.nix  Bind.purs  Monad.purs
purescript-prelude/src/Data/: Bounded.nix  CommutativeRing.purs  Eq.js  Eq.nix  Eq.purs  EuclideanRing.nix  Function.purs  HeytingAlgebra.nix  Monoid.purs  Ord.nix  Ord.purs  Ring.nix  Ring.purs  Semigroup.nix  Semigroup.purs  Semiring.nix  Show.nix  Show.purs  Symbol.purs  Unit.js
purescript-prelude/src/Data/Semiring/: Generic.purs
purescript-prelude/src/Data/Show/: Generic.js  Generic.nix  Generic.purs
purescript-prelude/src/Record/: Unsafe.nix
purescript-prelude/src/Type/: Proxy.purs
purescript-prelude/src/Type/Data/: Row.purs  RowList.purs
purescript-prelude/test/Data/Generic/: Rep.purs
purescript-prelude/test/Test/: Main.js  Main.purs  Utils.js  Utils.purs
purescript-safe-coerce/: .gitignore  CHANGELOG.md  spago.dhall
purescript-safe-coerce/test/: Main.purs
purescript-unsafe-coerce/: CHANGELOG.md  spago.dhall
scripts/: hackage-docs.sh  upload-with-cabal.sh
src/: Lib.hs
src/Nix/: Convert.hs  Expr.hs  Identifiers.hs
src/PureNix/: Convert.hs  Expr.hs  Identifiers.hs  Main.hs  Prelude.hs  Print.hs
src/PureNix/Main/: Build.hs  Run.hs
test/: Tests.nix  Tests.purs  spago.dhall
