cabal-version:   2.4
name:            purenix
version:         0
license:         BSD-3-Clause
build-type:      Simple
license-file:    LICENSE

-- category:
-- description:     description
-- synopsis:        one-line synopsis
author:          Dennis Gosnell, Jonas Carpay
maintainer:      Dennis Gosnell <cdep.illabout@gmail.com>
copyright:       2021 Dennis Gosnell, Jonas Carpay
homepage:        https://github.com/purenix-org/purenix
tested-with:     GHC ==8.10.4
extra-doc-files:
  CHANGELOG.md
  README.md

source-repository head
  type:     git
  location: git://github.com/purenix-org/purenix

common common-options
  build-depends:    base >=4.9 && <5
  default-language: Haskell2010
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wredundant-constraints
    -fhide-source-paths -Wpartial-fields

library
  import:          common-options
  hs-source-dirs:  src
  exposed-modules: Lib
  other-modules:
    Nix.Convert
    Nix.Expr
    Nix.Identifiers
    Nix.Prelude
    Nix.Print

  build-depends:
    , aeson
    , bytestring
    , containers
    , directory
    , filepath
    , microlens-platform
    , mtl
    , pretty-simple
    , purescript          ==0.14.4
    , purescript-cst
    , text

executable purenix
  import:         common-options
  hs-source-dirs: app
  main-is:        Main.hs
  build-depends:  purenix
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N

test-suite purenix-test
  import:         common-options
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Spec.hs
  build-depends:
    , hspec
    , HUnit
    , purenix
    , QuickCheck

  ghc-options:    -threaded -rtsopts -with-rtsopts=-N

benchmark purenix-bench
  import:         common-options
  type:           exitcode-stdio-1.0
  hs-source-dirs: bench
  main-is:        Main.hs
  build-depends:
    , criterion
    , purenix

  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
