cabal-version:   2.4
name:            purenix
version:         1.1
license:         BSD-3-Clause
build-type:      Simple
license-file:    LICENSE

-- category:
-- description:     description
synopsis:
  Nix backend for PureScript.  Transpile PureScript code to Nix.

author:          Dennis Gosnell, Jonas Carpay
maintainer:      Dennis Gosnell <cdep.illabout@gmail.com>
copyright:       2021 Dennis Gosnell, Jonas Carpay
homepage:        https://github.com/purenix-org/purenix
tested-with:     GHC ==8.10.4
extra-doc-files:
  CHANGELOG.md
  README.md

source-repository head
  type:     git
  location: git://github.com/purenix-org/purenix

common common-options
  build-depends:    base >=4.9 && <5
  default-language: Haskell2010
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wredundant-constraints
    -fhide-source-paths -Wpartial-fields

library
  import:          common-options
  hs-source-dirs:  src
  exposed-modules:
    PureNix.Convert
    PureNix.Expr
    PureNix.Identifiers
    PureNix.Main
    PureNix.Prelude
    PureNix.Print

  build-depends:
    , aeson
    , bytestring
    , containers
    , directory
    , filepath
    , microlens-platform
    , mtl
    , pretty-simple
    , purescript          ^>=0.15
    , text

executable purenix
  import:         common-options
  hs-source-dirs: app
  main-is:        Main.hs
  build-depends:  purenix
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
