cabal-version:   2.4
name:            purenix
version:         0
license:         BSD-3-Clause
build-type:      Simple
license-file:    LICENSE
author:          Dennis Gosnell
maintainer:      Dennis Gosnell <cdep.illabout@gmail.com>
copyright:       2021 Dennis Gosnell
tested-with:     GHC ==8.6.3 || ==8.8.3 || ==8.10.5
extra-doc-files:
  CHANGELOG.md
  README.md

-- category:
-- description:     description
-- synopsis:        one-line synopsis
-- homepage:        https://github.com/FIXME/purenix#readme
-- source-repository head
--   type:     git
--   location: git://github.com/FIXME/purenix.git

common common-options
  build-depends:    base >=4.9 && <5
  default-language: Haskell2010
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wredundant-constraints
    -fhide-source-paths -Wpartial-fields

library
  import:          common-options
  hs-source-dirs:  src
  exposed-modules: Lib
  build-depends:
    , containers
    , mtl

executable purenix-exe
  import:         common-options
  hs-source-dirs: app
  main-is:        Main.hs
  build-depends:  purenix
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N

test-suite purenix-test
  import:         common-options
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Spec.hs
  build-depends:
    , hspec
    , HUnit
    , purenix
    , QuickCheck

  ghc-options:    -threaded -rtsopts -with-rtsopts=-N

benchmark purenix-bench
  import:         common-options
  type:           exitcode-stdio-1.0
  hs-source-dirs: bench
  main-is:        Main.hs
  build-depends:
    , criterion
    , purenix

  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
